design tour details page of user

--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -112,3 +112,10 @@
   }
 }
 
+.scroll-container {
+  scrollbar-width: none; 
+  -ms-overflow-style: none;
+}
+.scroll-container::-webkit-scrollbar {
+  display: none; 
+}
