--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -119,3 +119,14 @@
 .scroll-container::-webkit-scrollbar {
   display: none; 
 }
+
+
+input.no-counter::-webkit-outer-spin-button,
+input.no-counter::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input.no-counter[type=number] {
+  -moz-appearance: textfield;
+}
